# MyMTLWalletBot

./: .dockerignore  .env.template  .gitignore  .gitleaks.toml  AGENTS.md  AI_FIRST.md  CHEQUE_ROUTER_BUGS.md  Dockerfile  Dockerfile.webapp  PROJECT_OVERVIEW.md  README.md  app_logger.py  check_transaction.py  clean.sh  config_reader.py  conftest.py  docker-compose.yml  fb.py  justfile  mytypes.py  pyproject.toml  pytest.ini  requirements.txt  start.py  start.sh  start_server.sh  test.py  test_output.txt  time_handlers.py  update_service.sh
bot/: conftest.py  pyproject.toml  pytest.ini  start.py  start.sh
bot/core/: constants.py
bot/core/domain/: entities.py  value_objects.py
bot/core/interfaces/: repositories.py  services.py
bot/core/models/: notification.py
bot/core/use_cases/cheque/: cancel_cheque.py  claim_cheque.py  create_cheque.py
bot/core/use_cases/payment/: send_payment.py
bot/db/: db_pool.py  models.py  mongo.py
bot/db/migrations/: 001_add_signing_mode.sql
bot/infrastructure/: log_models.py  states.py
bot/infrastructure/factories/: use_case_factory.py
bot/infrastructure/persistence/: repository_factory.py  sqlalchemy_addressbook_repository.py  sqlalchemy_cheque_repository.py  sqlalchemy_message_repository.py  sqlalchemy_notification_repository.py  sqlalchemy_user_repository.py  sqlalchemy_wallet_repository.py
bot/infrastructure/services/: app_context.py  encryption_service.py  localization_service.py  notification_history_service.py  notification_service.py  stellar_service.py  wallet_secret_service.py
bot/infrastructure/utils/: async_utils.py  common_utils.py  notification_utils.py  stellar_utils.py  telegram_utils.py
bot/infrastructure/workers/: signing_worker.py
bot/keyboards/: common_keyboards.py  webapp.py
bot/langs/: am.json  en.json  hy.json  me.json  ru.json  ua.json
bot/middleware/: app_context.py  db.py  localization.py  log.py  old_buttons.py  sentry_error_handler.py  throttling.py
bot/other/: asset_visibility_tools.py  config_reader.py  counting_lock.py  faststream_tools.py  gpt.py  grist_tools.py  gspread_tools.py  lang_tools.py  locks.py  loguru_tools.py  mytypes.py  signing_helpers.py  soroban_render.py  stellar_error_codes.py  stellar_tools.py  thothpay_tools.py  ton_tools.py  tron_tools.py  web_tools.py
bot/routers/: add_wallet.py  admin.py  bsn.py  cheque.py  common_end.py  common_setting.py  common_start.py  fest.py  inout.py  monitoring.py  mtlap.py  mtltools.py  notification_settings.py  receive.py  send.py  sign.py  start_msg.py  swap.py  ton.py  trade.py  uri.py  wallet_setting.py
bot/scripts/: argon2_benchmark.py  manage_keys.py  migrate_wallet_crypto_v2.py
bot/services/: ton_service.py
bot/tests/: conftest.py  poc_async_firebird.py  test_signing_flow.py
bot/tests/core/: test_get_balance.py  test_get_wallet_secrets_with_seed.py  test_payment_use_cases.py  test_process_uri_real.py  test_register_user_with_seed.py  test_trade_use_cases.py  test_unlimited.py  test_update_lang.py  test_use_cases.py  test_use_cases_new.py
bot/tests/infrastructure/: test_decimal_separator.py  test_encryption_service.py  test_infrastructure_repositories.py  test_mock_server_html_validation.py  test_notification_webhook.py  test_telegram_utils.py
bot/tests/other/: test_back_button_text.py  test_config_telegram_api_url.py  test_import_sanity.py  test_langs_json.py  test_sign_reproduce.py  test_soroban_render.py  test_stellar_tools.py  test_syntax.py
bot/tests/routers/: test_add_wallet.py  test_admin.py  test_bsn.py  test_cheque.py  test_common_end.py  test_common_setting.py  test_common_start.py  test_fest.py  test_inout.py  test_monitoring.py  test_mtlap.py  test_mtltools.py  test_notification_settings.py  test_receive.py  test_send.py  test_sign.py  test_start_msg.py  test_swap.py  test_ton.py  test_trade.py  test_uri.py  test_uri_repro.py  test_wallet_setting.py  test_wallet_setting_visibility.py
bot/tests/services/: test_notification_history_service.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  constants.py  schemas.py
webapp/: __init__.py  app.py  pyproject.toml
webapp/static/css/: style.css
webapp/static/js/: crypto-storage.js  i18n.js
webapp/templates/: base.html  import.html  settings.html  sign.html
(+284 files in other folders)
