[project]
name = "mmwb-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram~=3.13.1",
    "aiohttp>=3.10.11",
    "aiohttp-sse-client>=0.2.1",
    "apscheduler~=3.10.4",
    "base58~=2.1.1",
    "cryptocode~=0.1",
    "environs~=11.2.1",
    "faststream[redis]==0.6.0rc1",
    "fdb>=2.0.4",
    "gspread-asyncio~=2.0.0",
    "jsonpickle==3.3.0",
    "loguru~=0.7.2",
    "motor~=3.6.0",
    "openai==1.50.2",
    "opencv-python~=4.10.0.84",
    "pillow~=10.4.0",
    "protobuf~=5.28.3",
    "pydantic~=2.9.2",
    "pydantic-settings~=2.6.0",
    "python-dateutil~=2.9.0",
    "pytonapi~=0.4.3",
    "pytoniq~=0.1.40",
    "pyzbar~=0.1.9",
    "qrcode~=7.4.2",
    "redis~=5.1.0",
    "requests~=2.32.3",
    "sentry-sdk==1.45.1",
    "sqlalchemy~=2.0.35",
    "sqlalchemy-firebird==2.0.2",
    "sqlalchemy-firebird-async[firebird-driver]>=0.2.0",
    "stellar-sdk~=11.1.0",
    "sulguk~=0.8.0",
    "tonutils>=0.5.6",
    "tronpy~=0.5.0",
    "tzlocal~=5.2",
    "uvloop~=0.21.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-python-dateutil>=2.9.0.20251115",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
explicit_package_bases = true
warn_unused_ignores = true
show_error_codes = true
# ignore_missing_imports = true