[project]
name = "mmwb-shared"
version = "0.1.0"
description = "Shared schemas and constants for MMWB bot and webapp"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
