[project]
name = "mmwb-webapp"
version = "0.1.0"
description = "Web App for biometric transaction signing"
requires-python = ">=3.12"
dependencies = [
    "mmwb-shared",
    "fastapi>=0.115.0",
    "faststream[redis]==0.6.0rc1",
    "redis>=5.1.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
]

[tool.uv.sources]
mmwb-shared = { workspace = true }
